[project]
name = "jmqtt"
description = "Framework for building easy MQTT applications"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dev-CorliJoni" }]
keywords = ["mqtt", "iot"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dynamic = ["version","dependencies"]

[project.urls]
GitHub = "https://github.com/Dev-CorliJoni/jmqtt"
Source   = "https://github.com/Dev-CorliJoni/jmqtt"
Issues   = "https://github.com/Dev-CorliJoni/jmqtt/issues"
Instagram  = "https://www.instagram.com/dev.corlijoni/"


[tool.setuptools.packages.find]
where = ["."]
include = ["jmqtt*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
jmqtt = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "jmqtt.__version__" }
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"